--- a/src/sass/module/_price.scss
+++ b/src/sass/module/_price.scss
@@ -1,9 +1,8 @@
 @use "global" as *;
 
-.price__inner {
+.price__inner.inner {
     max-width: rem(540);
     width: 100%;
-    margin: 0 auto;
 
     @include mq("md") {
         max-width: rem(740);
