--- a/src/sass/module/_contact-FAQ.scss
+++ b/src/sass/module/_contact-FAQ.scss
@@ -8,10 +8,9 @@
   }
 }
 
-.contact-faq__inner {
+.contact-faq__inner.inner {
   max-width: rem(540);
   width: 100%;
-  margin: 0 auto;
 
   @include mq("md") {
     max-width: rem(700);
