--- a/src/sass/module/_contact-form.scss
+++ b/src/sass/module/_contact-form.scss
@@ -1,8 +1,8 @@
 @use "global" as *;
 
-.contact-form__inner {
+.contact-form__inner.inner {
   width: 100%;
-  margin: 0 auto;
+  max-width: rem(540);
 
   @include mq("md") {
     max-width: rem(700);
@@ -18,6 +18,7 @@
   @include mq("md") {
     flex-direction: row;
     padding: rem(39) 0;
+    gap: calc(100% - (68% + 31%));
   }
 }
 
@@ -26,7 +27,7 @@
   width: 100%;
 
   @include mq("md") {
-    max-width: rem(220);
+    width: 32%;
   }
 }
 
@@ -67,11 +68,12 @@
   border: solid rem(1) $green;
   height: rem(40);
   padding-left: rem(16);
+  background-color: $white;
+  opacity: 1;
 
   @include mq("md") {
-    max-width: rem(480);
     margin-top: 0;
-    width: 71%;
+    width: 68%;
   }
 }
 
@@ -87,9 +89,8 @@
   padding-left: rem(8);
 
   @include mq("md") {
-    max-width: rem(480);
     margin-top: 0;
-    width: 71%;
+    width: 68%;
   }
 }
 
@@ -124,7 +125,7 @@
   @include mq("md") {
     margin-top: 0;
     max-width: rem(480);
-    width: 71%;
+    width: 68%;
     height: rem(30);
   }
 }
