--- a/src/sass/module/_gallery.scss
+++ b/src/sass/module/_gallery.scss
@@ -1,59 +1,9 @@
 @use "global" as *;
 
-.gallery__container-wrapper {
+.gallery__photos-wrapper {
     margin-top: rem(40);
 
     @include mq("md") {
         margin-top: rem(80);
     }
-}
-
-.gallery__container {
-    display: grid;
-    grid-auto-rows: 1fr;
-    gap: rem(8);
-
-    @include mq("md") {
-        grid-template-columns: repeat(9, 1fr);
-        grid-auto-flow: dense;
-    }
-}
-
-.gallery__photo:nth-child(6n),
-.gallery__photo:nth-child(6n + 1) {
-    grid-row: span 2;
-    position: relative;
-    aspect-ratio: 345/446;
-
-    @include mq(md) {
-        grid-row: span 4;
-        grid-column: span 4;
-        aspect-ratio: 492/746;
-    }
-}
-
-
-.gallery__photo:nth-child(6n + 2),
-.gallery__photo:nth-child(6n + 3),
-.gallery__photo:nth-child(6n + 4),
-.gallery__photo:nth-child(6n + 5) {
-    position: relative;
-    grid-row: span 1;
-    aspect-ratio: 345/219;
-
-    @include mq(md) {
-        aspect-ratio: 580/347;
-        grid-row: span 2;
-        grid-column: span 5;
-    }
-}
-
-.gallery__photo>img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    object-fit: cover;
 }
