--- a/src/sass/module/_privacy.scss
+++ b/src/sass/module/_privacy.scss
@@ -9,8 +9,9 @@
 
 }
 
-.privacy__inner {
+.privacy__inner.inner {
   width: 100%;
+  max-width: rem(540);
 
   @include mq("md") {
     max-width: rem(850);
@@ -34,6 +35,7 @@
   height: rem(55);
   background-size: contain;
   background-repeat: no-repeat;
+  z-index: -1;
 
   @include mq("md") {
     top: rem(-69);
