--- a/src/sass/module/_campaign.scss
+++ b/src/sass/module/_campaign.scss
@@ -1,30 +1,12 @@
 @use "global" as *;
 
-.campaign__tabs::before {
-  position: absolute;
-  content: "";
-  display: block;
-  background-image: url(/assets/images/common/decoration-fish-right.svg);
-  top: rem(-24);
-  left: calc(50% - min(46vw, 10.8rem));
-  max-width: rem(121);
-  width: 100%;
-  height: rem(55);
-  background-size: contain;
-  background-repeat: no-repeat;
-  z-index: -1;
+.campaign__tabs {
+  max-width: rem(540);
+  margin: 0 auto;
 
   @include mq("md") {
-    top: rem(-70);
-    left: calc(50% - min(43.1vw, 38.9rem));
-    max-width: rem(301);
-    height: rem(138);
+    max-width: none;
   }
-}
-
-.campaign__tabs {
-  position: relative;
-  flex-wrap: wrap;
 }
 
 .campaign__cards {
