--- a/src/sass/module/_voice.scss
+++ b/src/sass/module/_voice.scss
@@ -4,13 +4,22 @@
   margin-top: rem(38);
 }
 
-.voice__cards-inner {
+.voice__cards-inner.inner {
+  max-width: rem(540);
+
+  @include mq("md") {
+    max-width: none;
+  }
+}
+
+.voice__tabs {
   max-width: rem(540);
   margin: 0 auto;
 
   @include mq("md") {
     max-width: none;
   }
+
 }
 
 .voice__pager-wrapper {
