--- a/src/sass/page/_sidebar-layout.scss
+++ b/src/sass/page/_sidebar-layout.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-.sidebar-wrapper {
+.sidebar-layout {
     margin-top: rem(80);
     width: 100%;
     max-width: rem(400);
@@ -10,5 +10,13 @@
         max-width: none;
         margin-top: 0;
         width: 27.2%;
+    }
+}
+
+.sidebar-layout__inner {
+    padding: 0 rem(24);
+
+    @include mq("md") {
+        padding: 0 0 0 rem(14);
     }
 }
