--- a/src/sass/module/_js-loading.scss
+++ b/src/sass/module/_js-loading.scss
@@ -28,21 +28,8 @@
     background-size: cover;
     width: 100%;
     height: 100vh;
-    animation: left;
 }
 
-/*
-@keyframes left {
-    0% {
-        opacity: 1;
-        transform: translateY(100%);
-    }
-
-    100% {
-        transform: translateY(0);
-    }
-}
-*/
 
 .js-loading__right {
     background-image: url(/assets/images/common/loading-right.png);
@@ -51,24 +38,12 @@
     background-size: cover;
     width: 100%;
     height: 100vh;
-    animation: right;
 }
 
-/*
-@keyframes right {
-    0% {
-        opacity: 1;
-        transform: translateY(100%);
-    }
-
-    100% {
-        transform: translateY(0);
-    }
-}*/
 
 .js-loading__last {
     background-image: url(/assets/images/common/FV-pc1.png);
-    background-position: center;
+    background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
     position: fixed;
