--- a/src/sass/module/_pager.scss
+++ b/src/sass/module/_pager.scss
@@ -25,6 +25,7 @@
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  cursor: pointer;
 }
 
 .pager__number-wrapper {
@@ -51,6 +52,7 @@
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  cursor: pointer;
 }
 
 .pager__number:first-child {
