--- a/src/sass/module/_archive-year.scss
+++ b/src/sass/module/_archive-year.scss
@@ -10,7 +10,7 @@
     position: absolute;
     content: "";
     display: block;
-    background-image: url(/assets/images/common/sidebar-archive-arrow.png);
+    background-image: url(../images/common/sidebar-archive-arrow.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
