--- a/src/sass/module/_blog-article.scss
+++ b/src/sass/module/_blog-article.scss
@@ -79,7 +79,7 @@
     position: absolute;
     content: "";
     display: block;
-    background-image: url(/assets/images/common/blog-article-icon.png);
+    background-image: url(../images/common/blog-article-icon.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
