--- a/src/sass/module/_faq-wrapper.scss
+++ b/src/sass/module/_faq-wrapper.scss
@@ -12,7 +12,7 @@
     position: absolute;
     content: "";
     display: block;
-    background-image: url(/assets/images/common/decoration-fish-right.svg);
+    background-image: url(../images/common/decoration-fish-right.svg);
     top: rem(-23);
     left: calc(50% - min(44.5vw, 10.4rem));
     max-width: rem(109);
