--- a/src/sass/module/_js-loading.scss
+++ b/src/sass/module/_js-loading.scss
@@ -22,7 +22,7 @@
 }
 
 .js-loading__left {
-    background-image: url(/assets/images/common/loading-left.png);
+    background-image: url(../images/common/loading-left.png);
     background-position: top right;
     background-repeat: no-repeat;
     background-size: cover;
@@ -32,7 +32,7 @@
 
 
 .js-loading__right {
-    background-image: url(/assets/images/common/loading-right.png);
+    background-image: url(../images/common/loading-right.png);
     background-position: top left;
     background-repeat: no-repeat;
     background-size: cover;
@@ -42,7 +42,7 @@
 
 
 .js-loading__last {
-    background-image: url(/assets/images/common/FV-pc1.png);
+    background-image: url(../images/common/FV-pc1.png);
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
