--- a/src/sass/module/_privacy.scss
+++ b/src/sass/module/_privacy.scss
@@ -27,7 +27,7 @@
   position: absolute;
   content: "";
   display: block;
-  background-image: url(/assets/images/common/decoration-fish-right.svg);
+  background-image: url(../images/common/decoration-fish-right.svg);
   top: rem(-23);
   left: calc(50% - min(45.5vw, 10.7rem));
   max-width: rem(117);
