--- a/src/sass/module/_sidebar.scss
+++ b/src/sass/module/_sidebar.scss
@@ -20,7 +20,7 @@
   position: absolute;
   content: "";
   display: block;
-  background-image: url(/assets/images/common/sidebar-icon.png);
+  background-image: url(../images/common/sidebar-icon.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
