--- a/src/sass/module/_site-map.scss
+++ b/src/sass/module/_site-map.scss
@@ -51,13 +51,15 @@
 
 //リストマーク付きのところ
 .site-map__main-title {
-  background: url(/assets/images/common/site-map__list-icon.png) no-repeat 0 0;
+  background: url(../images/common/site-map__list-icon.png) no-repeat 0 0;
   background-size: auto rem(18);
   padding-left: rem(22);
   line-height: 1.125;
   font-weight: $bold;
   margin-top: rem(40);
   list-style: none;
+  word-break: keep-all;
+  overflow-wrap: break-word;
 }
 
 .site-map__main-title:first-child {
@@ -65,7 +67,7 @@
 }
 
 .site-map__main-title--black {
-  background: url(/assets/images/common/site-map__list-icon--black.png) no-repeat 0 0;
+  background: url(../images/common/site-map__list-icon--black.png) no-repeat 0 0;
 }
 
 //リストマークつかないところ
