--- a/src/sass/page/_top-voice-wrapper.scss
+++ b/src/sass/page/_top-voice-wrapper.scss
@@ -1,7 +1,9 @@
 @use "global" as *;
+
 //トップお客様の声 余白
 .top-voice-wrapper {
   margin-top: rem(76);
+
   @include mq("md") {
     position: relative;
     margin-top: rem(140);
@@ -11,10 +13,11 @@
 //トップお客様の声、装飾上
 .top-voice-wrapper::before {
   display: none;
+
   @include mq("md") {
     position: absolute;
     content: "";
-    background-image: url(/assets/images/common/decoration-fish-right.svg);
+    background-image: url(../images/common/decoration-fish-right.svg);
     display: block;
     top: rem(-120);
     left: calc(50% - min(48.4vw, 38.75rem));
@@ -24,13 +27,15 @@
     background-size: contain;
   }
 }
+
 //トップお客様の声、装飾下
 .top-voice-wrapper::after {
   display: none;
+
   @include mq("md") {
     position: absolute;
     content: "";
-    background-image: url(/assets/images/common/decoration-dragon-fish.png);
+    background-image: url(../images/common/decoration-dragon-fish.png);
     display: block;
     bottom: rem(-70);
     right: calc(50% - min(37vw, 33.75rem));
