--- a/src/sass/module/_contact-form.scss
+++ b/src/sass/module/_contact-form.scss
@@ -45,6 +45,17 @@
 
 .contact-form__item {
   position: relative;
+  order: 2;
+}
+
+.contact-form__item--select {
+  display: flex;
+  flex-direction: column;
+
+  @include mq("md") {
+    flex-direction: row;
+
+  }
 }
 
 .contact-form__item::after {
@@ -59,7 +70,7 @@
   width: 100%;
   bottom: 0;
   left: 0;
-  background-image: url(/assets/images/common/contact-form-line.png);
+  background-image: url(../images/common/contact-form-line.png);
 }
 
 .contact-form__text {
@@ -73,7 +84,9 @@
 
   @include mq("md") {
     margin-top: 0;
-    width: 68%;
+    max-width: rem(480);
+    width: 106%;
+
   }
 }
 
@@ -90,7 +103,8 @@
 
   @include mq("md") {
     margin-top: 0;
-    width: 68%;
+    max-width: rem(480);
+    width: 123%;
   }
 }
 
@@ -107,7 +121,7 @@
 .contact-form__check {
   display: flex;
   align-items: center;
-  margin-top: rem(2);
+  margin: rem(2) 0 0 0;
 }
 
 .contact-form__label {
@@ -121,11 +135,12 @@
   font-size: rem(12);
   position: relative;
   height: rem(40);
+  width: 100%;
 
   @include mq("md") {
     margin-top: 0;
     max-width: rem(480);
-    width: 68%;
+    width: 300%;
     height: rem(30);
   }
 }
@@ -139,7 +154,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  background-image: url(/assets/images/common/contact-form-triangle.png);
+  background-image: url(../images/common/contact-form-triangle.png);
   display: block;
   height: rem(12);
   width: rem(12);
@@ -148,6 +163,33 @@
     top: rem(7);
   }
 
+}
+
+.contact-form__select-wrapper {
+  position: relative;
+  width: 100%;
+
+  @include mq("md") {
+    width: 67%;
+  }
+}
+
+.contact-form__select-wrapper::after {
+  position: absolute;
+  top: rem(29);
+  right: rem(16);
+  content: "";
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url(../images/common/contact-form-triangle.png);
+  display: block;
+  height: rem(12);
+  width: rem(12);
+
+  @include mq("md") {
+    top: rem(7);
+  }
 }
 
 .contact-form__select {
@@ -175,16 +217,16 @@
 }
 
 .contact-form__agreement label {
-  word-break: keep-all;
   overflow-wrap: break-word;
-  max-width: rem(252);
 
   @include mq("md") {
-    max-width: none;
+    display: flex;
+    align-items: center;
   }
 }
 
-.contact-form__check input[type=checkbox] {
+.contact-form__check input[type=checkbox],
+input[type="checkbox"] {
   width: rem(14);
   height: rem(14);
   display: inline-block;
@@ -197,11 +239,13 @@
   }
 }
 
-.contact-form__check input[type="checkbox"]:before {
+.contact-form__check input[type="checkbox"]:before,
+input[type="checkbox"]::before {
   opacity: 0;
 }
 
-.contact-form__check input[type="checkbox"]:checked:before {
+.contact-form__check input[type="checkbox"]:checked:before,
+input[type="checkbox"]:checked:before {
   opacity: 1;
   position: absolute;
   content: '';
@@ -213,10 +257,14 @@
   width: rem(13);
   top: rem(2);
   left: rem(0);
-  background-image: url(/assets/images/common/contact-form-check.png);
+  background-image: url(../images/common/contact-form-check.png);
 }
 
 //同意のチェックボックス
+.contact-form__agreement {
+  order: 3;
+}
+
 .contact-form__agreement input[type=checkbox] {
   width: rem(22);
   height: rem(22);
@@ -246,45 +294,19 @@
   width: rem(16);
   top: rem(4);
   left: rem(2);
-  background-image: url(/assets/images/common/contact-form-check.png);
+  background-image: url(../images/common/contact-form-check.png);
 }
 
 
 .contact-form__btn-wrapper {
   margin-top: rem(24);
   text-align: center;
+  order: 4;
+  display: flex;
+  justify-content: center;
 
   @include mq("md") {
     margin-top: rem(40);
-  }
-}
-
-//エラー
-
-.contact-form__error {
-  color: $red;
-  font-size: rem(14);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: fit-content;
-  margin: 0 auto;
-
-  @include mq("md") {
-    flex-direction: row;
-  }
-}
-
-.contact-form__error-texts {
-  color: $red;
-  font-size: rem(14);
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-
-  @include mq("md") {
-    flex-direction: row;
-    justify-content: center;
   }
 }
 
@@ -302,24 +324,20 @@
   }
 }
 
-.contact-form__error {
+.contact-form__text {
   background-color: rgba($color: $red, $alpha: 0.2);
   border: solid rem(1) $red;
   margin-top: rem(16);
   width: 100%;
-  height: rem(40);
+  height: rem(200);
   padding-left: rem(16);
   font-size: rem(16);
 
   @include mq("md") {
     max-width: rem(480);
     margin-top: 0;
-    width: 71%;
+    width: 120%;
   }
-}
-
-.contact-form__error::placeholder {
-  color: $white;
 }
 
 .contact-form__text.error {
@@ -354,4 +372,107 @@
   text-wrap: nowrap;
   line-height: 1.44;
 
+}
+
+//ボタン
+.contact-form__submit {
+  position: relative;
+  display: inline-block;
+  width: rem(202);
+  background-color: $green;
+  color: $white;
+  font-family: $title-font-family;
+  font-size: rem(14);
+  line-height: 1.5714;
+  text-align: center;
+  z-index: 5;
+  display: flex;
+  align-items: center;
+}
+
+.contact-form__submit:hover {
+  color: $green;
+}
+
+//ボタン二重線
+.contact-form__submit:before {
+  position: absolute;
+  border: rem(1) solid $green;
+  top: rem(4);
+  left: rem(10);
+  right: rem(-4);
+  bottom: rem(-4);
+  content: "";
+  display: inline-block;
+  z-index: -1;
+}
+
+//ボタン矢印
+.contact-form__submit span.arrow {
+  position: relative;
+  height: rem(1);
+  width: rem(60);
+  margin-right: rem(40);
+  background-color: $white;
+}
+
+.contact-form__submit span.arrow::before {
+  position: absolute;
+  display: inline-block;
+  width: rem(40);
+  height: rem(1);
+  margin-left: rem(8);
+  vertical-align: middle;
+  line-height: 1;
+  background: $white;
+  z-index: inherit;
+}
+
+.contact-form__submit span.arrow::after {
+  content: "";
+  position: absolute;
+  width: rem(10);
+  border: rem(1.8) solid $white;
+  border-left: 0;
+  border-bottom: 0;
+  transform: rotate(40deg);
+  transform-origin: top right;
+  top: 0;
+  right: 0;
+  box-sizing: border-box;
+  z-index: inherit;
+}
+
+.contact-form__submit span.arrow:hover {
+  color: $green;
+}
+
+//アニメーション
+.contact-form__submit::after {
+  position: absolute;
+  background-color: $white;
+  border: rem(1) solid $green;
+  color: $green;
+  content: "";
+  display: inline-block;
+  height: 100%;
+  left: 0;
+  top: 0;
+  transform: scale(0, 1);
+  transform-origin: left top;
+  transition: 0.2s cubic-bezier(0.45, 0, 0.55, 1);
+  width: 100%;
+  z-index: -1;
+}
+
+.contact-form__submit:hover::after {
+  transform: scale(1, 1);
+}
+
+.contact-form__submit:hover span {
+  background-color: $green;
+}
+
+.contact-form__submit:hover span::after {
+  border: rem(1.3) solid $green;
 }
