--- a/src/sass/module/_lower-FV.scss
+++ b/src/sass/module/_lower-FV.scss
@@ -7,10 +7,10 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url(/assets/images/common/aboutus-FV-sp.jpg); //仮
+  background-image: url(../images/common/aboutus-FV-sp.jpg);
 
   @include mq("md") {
-    background-image: url(/assets/images/common/aboutus-FV.jpg); //仮
+    background-image: url(../images/common/aboutus-FV.jpg);
     height: rem(548);
   }
 }
@@ -36,73 +36,73 @@
 }
 
 .lower-FV__img--campaign {
-  background-image: url(/assets/images/common/campaign-FV-sp.png);
+  background-image: url(../images/common/campaign-FV-sp.png);
 
   @include mq("md") {
-    background-image: url(/assets/images/common/campaign-FV.png);
+    background-image: url(../images/common/campaign-FV.png);
   }
 }
 
 .lower-FV__img--about {
-  background-image: url(/assets/images/common/aboutus-FV-sp.jpg);
+  background-image: url(../images/common/aboutus-FV-sp.jpg);
 
   @include mq("md") {
-    background-image: url(/assets/images/common/aboutus-FV.jpg);
+    background-image: url(../images/common/aboutus-FV.jpg);
   }
 }
 
 .lower-FV__img--info {
-  background-image: url(/assets/images/common/info-FV-sp.jpg);
+  background-image: url(../images/common/info-FV-sp.jpg);
 
   @include mq("md") {
-    background-image: url(/assets/images/common/info-FV.jpg);
+    background-image: url(../images/common/info-FV.jpg);
   }
 }
 
 .lower-FV__img--blog {
-  background-image: url(/assets/images/common/blog-FV-sp.png);
+  background-image: url(../images/common/blog-FV-sp.png);
 
   @include mq("md") {
-    background-image: url(/assets/images/common/blog-FV.png);
+    background-image: url(../images/common/blog-FV.png);
   }
 }
 
 .lower-FV__img--voice {
-  background-image: url(/assets/images/common/voice-FV-sp.png);
+  background-image: url(../images/common/voice-FV-sp.png);
 
   @include mq("md") {
-    background-image: url(/assets/images/common/voice-FV.png);
+    background-image: url(../images/common/voice-FV.png);
   }
 }
 
 .lower-FV__img--price {
-  background-image: url(/assets/images/common/price-FV-sp.jpg);
+  background-image: url(../images/common/price-FV-sp.jpg);
 
   @include mq("md") {
-    background-image: url(/assets/images/common/price-FV.png);
+    background-image: url(../images/common/price-FV.png);
   }
 }
 
 .lower-FV__img--FAQ {
-  background-image: url(/assets/images/common/FAQ-FV-sp.png);
+  background-image: url(../images/common/FAQ-FV-sp.png);
 
   @include mq("md") {
-    background-image: url(/assets/images/common/FAQ-FV.jpg);
+    background-image: url(../images/common/FAQ-FV.jpg);
   }
 }
 
 .lower-FV__img--contact {
-  background-image: url(/assets/images/common/contact-FV-sp.jpg);
+  background-image: url(../images/common/contact-FV-sp.jpg);
 
   @include mq("md") {
-    background-image: url(/assets/images/common/contact-FV.png);
+    background-image: url(../images/common/contact-FV.png);
   }
 }
 
 .lower-FV__img--fish {
-  background-image: url(/assets/images/common/sitemap-privacy-FV-sp.png);
+  background-image: url(../images/common/sitemap-privacy-FV-sp.png);
 
   @include mq("md") {
-    background-image: url(/assets/images/common/sitemap-privacy-FV.png);
+    background-image: url(../images/common/sitemap-privacy-FV.png);
   }
 }
