--- a/src/sass/module/_pager.scss
+++ b/src/sass/module/_pager.scss
@@ -11,8 +11,8 @@
   gap: rem(82);
 }
 
-.pager__before,
-.pager__after {
+.wp-pagenavi a,
+.wp-pagenavi span {
   display: inline-block;
   width: rem(38);
   height: rem(38);
@@ -28,7 +28,8 @@
   cursor: pointer;
 }
 
-.pager__number-wrapper {
+.pager__number-wrapper,
+.wp-pagenavi {
   display: flex;
   flex-direction: row;
   gap: rem(11);
@@ -38,7 +39,9 @@
   }
 }
 
-.pager__number {
+.pager__number,
+a.page.larger,
+a.page.smaller {
   display: inline-block;
   min-width: rem(38);
   height: rem(38);
@@ -55,8 +58,9 @@
   cursor: pointer;
 }
 
-.pager__number:first-child {
+.wp-pagenavi span.current {
   background-color: $green;
+  border: solid rem(1) $green;
   color: $white;
 }
 
@@ -69,7 +73,10 @@
   }
 }
 
-.pager__number:hover {
+.pager__number:hover,
+.wp-pagenavi span.current:hover,
+a.page.larger:hover,
+a.page.smaller:hover {
   background-color: $green;
   color: $white;
 }
@@ -78,11 +85,113 @@
   transition: fill 0.3s;
 }
 
+//前のページ、次のページ
+.pager__before-page {
+  display: inline-block;
+  width: rem(38);
+  height: rem(38);
+  border: solid rem(1) $green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  cursor: pointer;
+
+}
+
+.pager__before-page:hover {
+  background-color: $green;
+  color: $white;
+}
+
+.pager__before-page span {
+  // mask関連の指定
+  mask-position: center center;
+  mask-repeat: no-repeat;
+  mask-size: 30%;
+  mask-image: url(../images/common/pager-pre.svg);
+  background: $green;
+}
+
+.pager__before-page span:hover {
+  background: $white;
+}
+
+.pager__after-page {
+  display: inline-block;
+  width: rem(38);
+  height: rem(38);
+  border: solid rem(1) $green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+.pager__after-page:hover {
+  background-color: $green;
+  color: $white;
+}
+
+.pager__after-page span {
+  // mask関連の指定
+  mask-position: center center;
+  mask-repeat: no-repeat;
+  mask-size: 30%;
+  mask-image: url(../images/common/pager-next.svg);
+  background: $green; // 背景色でSVGの色を指定
+
+}
+
+.pager__after-page span:hover {
+  background: $white;
+}
+
+//前のページ、次のページの位置調整
+a.nextpostslink {
+  margin-left: rem(28);
+}
+
+a.previouspostslink {
+  margin-right: rem(28);
+}
+
+//ブログ記事内のページャー
+.pager__before,
+.pager__after {
+  display: inline-block;
+  width: rem(38);
+  height: rem(38);
+  border: solid rem(1) $green;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  background-color: $white;
+  color: $green;
+}
 
 .pager__before:hover,
 .pager__after:hover {
   background-color: $green;
   color: $white;
+}
+
+.pager__before a,
+.pager__after a {
+  height: inherit;
+  display: flex;
+  width: inherit;
+  justify-content: center;
+  align-items: center;
 }
 
 .pager__before:hover .pager__path,
