--- a/src/sass/module/_top-about-us.scss
+++ b/src/sass/module/_top-about-us.scss
@@ -1,29 +1,36 @@
 @use "global" as *;
+
 //インナー
 .top-about-us__inner {
   max-width: rem(500);
   width: 100%;
+
   @include mq("md") {
     max-width: rem(1130);
     width: 100%;
   }
-} //about us画像全体
+}
+
+//about us画像全体
 .top-about-us__img-wrapper {
   margin-top: rem(28);
   display: flex;
   flex-direction: row;
+
   @include mq("md") {
     margin-top: rem(40);
     position: relative;
   }
 }
+
 //トップabout us装飾
 .top-about-us__img-wrapper::after {
   display: none;
+
   @include mq("md") {
     position: absolute;
     content: "";
-    background-image: url(/assets/images/common/about-us-decoration.png);
+    background-image: url("../images/common/about-us-decoration.png");
     display: block;
     bottom: -13%;
     right: calc(50% - min(44.4vw, 39.8rem));
@@ -33,11 +40,13 @@
     background-repeat: no-repeat;
   }
 }
+
 //ボタン周り
 .top-about-us__btn-wrapper {
   margin-top: rem(25);
   text-align: center;
   padding-bottom: rem(5);
+
   @include mq("md") {
     margin-top: rem(40);
   }
@@ -48,12 +57,14 @@
   display: flex;
   flex-direction: row;
 }
+
 //テキスト全体
 .top-about-us__texts {
   margin-top: rem(39);
   display: grid;
   grid-template-columns: 1fr;
   row-gap: rem(0);
+
   @include mq("md") {
     margin-top: rem(41);
     width: min(rem(840), 80%);
@@ -65,24 +76,29 @@
     right: calc(50% - min(48.4vw, 31rem));
   }
 }
+
 .top-about-us__main-text {
   font-size: rem(40);
   line-height: 1;
   font-family: $title-font-family;
   color: $green;
+
   @include mq("md") {
     font-size: rem(80);
     line-height: 1.2;
     color: $white;
   }
 }
+
 .top-about-us__text {
   margin-top: rem(16);
   font-weight: $regular;
+
   @include mq("md") {
     margin-top: rem(0);
   }
 }
+
 //top-about us背景画像左側
 .top-about-us__img-left {
   margin-bottom: rem(18);
@@ -91,7 +107,8 @@
   width: 37.03%;
   z-index: 0;
 }
-.top-about-us__img-left > img {
+
+.top-about-us__img-left>img {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -100,12 +117,14 @@
   transform: translate(-50%, -50%);
   object-fit: cover;
 }
+
 @include mq("md") {
   .top-about-us__img-left {
     margin-bottom: rem(55);
     aspect-ratio: 400 / 606;
   }
 }
+
 //top-about us背景画像右側
 .top-about-us__img-right {
   margin-top: rem(26);
@@ -115,7 +134,8 @@
   position: relative; //写真比率管理用
   z-index: -1;
 }
-.top-about-us__img-right > img {
+
+.top-about-us__img-right>img {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -124,6 +144,7 @@
   transform: translate(-50%, -50%);
   object-fit: cover;
 }
+
 @include mq("md") {
   .top-about-us__img-right {
     aspect-ratio: 880 / 581;
