--- a/src/sass/module/_top-js-loading.scss
+++ b/src/sass/module/_top-js-loading.scss
@@ -1,4 +1,5 @@
 @use "global" as *;
+
 //
 .top-js-loading__start {
   position: fixed;
@@ -7,6 +8,7 @@
   z-index: 999;
   background-color: #fff;
 }
+
 //
 .top-js-loading__middle {
   width: 100%;
@@ -16,29 +18,32 @@
   display: flex;
   flex-direction: row;
 }
+
 .top-js-loading__middle-left {
   width: 100%;
   height: 100vh;
-  background-image: url(/assets/images/common/loading-left.png);
+  background-image: url(../images/common/loading-left.png);
   background-position: top right;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .top-js-loading__middle-right {
   width: 100%;
   height: 100vh;
-  background-image: url(/assets/images/common/loading-right.png);
+  background-image: url(../images/common/loading-right.png);
   background-position: top left;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 //
 .top-js-loading__last {
   opacity: 1;
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url(/assets/images/common/FV-pc1.png);
+  background-image: url(../images/common/FV-pc1.png);
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
