--- a/src/sass/page/_about-us-wrapper.scss
+++ b/src/sass/page/_about-us-wrapper.scss
@@ -13,7 +13,7 @@
     position: absolute;
     content: "";
     display: block;
-    background-image: url(/assets/images/common/decoration-fish-right.svg);
+    background-image: url(../images/common/decoration-fish-right.svg);
     top: rem(0);
     left: calc(50% - min(46vw, 10.8rem));
     max-width: rem(121);
