--- a/src/sass/page/_contact-wrapper.scss
+++ b/src/sass/page/_contact-wrapper.scss
@@ -61,7 +61,7 @@
   position: absolute;
   content: "";
   display: block;
-  background-image: url(/assets/images/common/decoration-fish.png);
+  background-image: url(../images/common/decoration-fish.png);
   top: rem(-10);
   right: calc(50% - min(46.4vw, 10.8rem));
   max-width: rem(109);
