--- a/src/sass/page/_gallery-wrapper.scss
+++ b/src/sass/page/_gallery-wrapper.scss
@@ -16,7 +16,7 @@
     position: absolute;
     content: "";
     display: block;
-    background-image: url(/assets/images/common/contact-fish.png);
+    background-image: url(../images/common/contact-fish.png);
     right: calc(50% - min(44.6vw, 40.1rem));
     width: 100%;
     background-size: contain;
